# blackhole

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html
src/: black_hole.rs  main.rs
