[package]
name = "h4"
version = "0.23.0"
authors = ["Marc Soda Jr <m@soda.fm>"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.70"
publish = false
default-run = "h4"

[dependencies]
eframe = { version = "0.23.0", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
serde = { version = "1", features = ["derive"] }
egui = "0.23.0"
rand = "0.8.5"

# Dependencies for WebAssembly support
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4"
log = "0.4"
